--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -138,3 +138,20 @@
     }
   }
 }
+
+
+%button-base {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  height: 48px;
+  min-width: 180px;
+  padding: 0 24px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
+  white-space: nowrap;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
